--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   go_router: ^14.1.0
+  go_router_builder: ^2.6.2
+  build_runner: ^2.4.9
 
 dev_dependencies:
   flutter_test:
